# py-alfred

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  cov.xml  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: agile-user-story.md
.github/workflows/: pylint.yml  python-build.yml  python-publish.yml
alfred/: __init__.py  create.py  search.py  showtime.py
alfred/cli/: maker.py
alfred/configs/: alfred.yaml  structure.yaml
alfred/core/: __init__.py  _connect.py  connect.py
alfred/structure/: database.py  project.py
docs/: CHANGELOG.md  Untitled Diagram.drawio
resources/: write.nk
scripts/: wg-shot-create
src/alfred/: __init__.py  create.py  create_old.py  search.py  showtime.py
src/alfred/_core/: almongo.py  cache_handler.py  connect.py  controller.py
src/alfred/cli/: maker.py
src/alfred/configs/: alfred.yaml
src/alfred/models/: abstract_duck.py  abstract_model.py  asset.py  assets.py  contexts.py
src/alfred/structure/: __init__.py  generate.py  project.py
tests/: __init__.py  test_alfred.py  test_alfred_structure_project.py  test_generate.py  test_models_context.py
