[tool.poetry]
name = "alfred"
version = "0.2.0"
description = "Database pipeline manager and creater"
authors = ["robert-v <robertvigorito@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.0,<4"
PyYAML = "^5.4.1"
confuse = "^1.4.0"
anytree = "^2.8.0"
requests = "^2.25.1"
bs4 = "^0.0.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"


[tool.poetry.scripts]
wg-shot-create = "alfred.cli.maker:create"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py35, py36, py37, py38, py39

[testenv]
whitelist_externals = poetry
commands =
    pip install -U pip
    poetry install -v
    poetry run pytest -s -ra tests
"""